@@ -186,11 +186,7 @@ end
 # >-----------------------------[ Run 'Bundle Install' ]-------------------------------<
 
 say_wizard "Installing gems. This will take a while."
-if prefs.has_key? :bundle_path
-  run "bundle install --without production --path #{prefs[:bundle_path]}"
-else
-  run 'bundle install --without production'
-end
+run 'bundle install --without production'
 say_wizard "Updating gem paths."
 Gem.clear_paths
 # >-----------------------------[ Run 'After Bundler' Callbacks ]-------------------------------<
