@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.4.11"
+  VERSION = "2.4.12"
 end
